--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "stm32-firmware-loader"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,6 +11,7 @@ path = "src/lib.rs"
 
 [dependencies]
 clap = "^3"
-gpio-cdev = "0.6.0"
-parse_int = "0.6.0"
+gpio-cdev = "0.6"
+log = "0.4"
+parse_int = "0.6"
 serialport = "^3"
