--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ env_logger = { version="0.11", optional = true }
 gpio-cdev = "0.6"
 log = "0.4"
 parse_int = "0.6"
-serialport = "^3"
+serialport = { version = "^3", default-features = false }
